--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,14 @@
 .footer__copyright{
-min-width: 186px;
-height: 16px;
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 16px;
 color: #FFF;
 margin: 0;
-
+}
+@media screen and (max-width:670px) {
+    .footer__copyright {
+        margin: 48px 0 0;
+        line-height: 14px;
+    }
 }
