--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,10 +1,18 @@
-.footer__link{
-width: 86px;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 18px;
-color: #FFF;
-text-decoration: none;
-margin-right: 18px;
+.footer__link {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 18px;
+    color: #FFF;
+    text-decoration: none;
+    transition: opacity .3s ease;
+}
+.footer__link:hover {
+    opacity: .8;
+}
+@media screen and (max-width:670px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
 }
