--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer{
     max-width: 1184px;
-    margin: 92px auto;
+    margin: 92px auto 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,20 +8,17 @@
 }
 @media screen and (max-width:1280px) {
     .footer {
-        margin: 92px 48px;
-        padding-bottom: 24px;
+        margin: 92px 48px 0;
     }
 }
 @media screen and (max-width:768px) {
     .footer {
-        margin: 88px 24px;
-        padding-bottom: 24px;
+        margin: 88px 24px 0;
     }
 }
 @media screen and (max-width:670px) {
     .footer {
-        margin: 64px 16px;
-        padding-bottom: 24px;
+        margin: 64px 16px 0;
         flex-direction: column;
         align-items: flex-start;
     }
