--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,13 +1,16 @@
 .header__link {
-    color: #fff;
+    margin-left: 18px;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+    color: #fff;
     transition: opacity .2s;
-    margin-left: 18px;
+    text-decoration: none;
 }
-
+.header__link:hover {
+    opacity: .8;
+}
 @media screen and (max-width: 320px) {
     .header__link {
         font-size: 18px;
