--- a/pages/index.css
+++ b/pages/index.css
@@ -4,9 +4,10 @@
 @import url(../fonts/fonts.css);
 
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/_logo/);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/header/__link/_activate/header__link_activate.css);
 
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
@@ -46,6 +47,7 @@
 
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links-item/footer__links-item.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
